// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pager /> rendering should render default correctly 1`] = `
<div
  className="list-pager"
  data-testid="overviewPagerComponent"
>
  <div
    className="pager"
  >
    <span
      className="pager_step huidige"
      key="1"
      role="presentation"
    >
      <strong>
        1
      </strong>
    </span>
    <a
      className="pager_step pagina"
      key="2"
      onClick={[Function]}
      role="presentation"
    >
      2
    </a>
    <a
      className="pager_step pagina"
      key="3"
      onClick={[Function]}
      role="presentation"
    >
      3
    </a>
    <span
      className="pager_step puntjes"
      key="4"
      role="presentation"
    >
      <strong>
        ...
      </strong>
    </span>
    <a
      className="pager_step pagina"
      key="22"
      onClick={[Function]}
      role="presentation"
    >
      22
    </a>
    <a
      className="pager_step pagina"
      key="23"
      onClick={[Function]}
      role="presentation"
    >
      23
    </a>
    <a
      className="pager_step pagina"
      key="24"
      onClick={[Function]}
      role="presentation"
    >
      24
    </a>
    <a
      className="pager_nav volgende"
      onClick={[Function]}
      role="presentation"
    >
      volgende
    </a>
  </div>
</div>
`;

exports[`<Pager /> rendering should render empty correctly 1`] = `
<div
  className="list-pager"
  data-testid="overviewPagerComponent"
>
  <div
    className="pager"
  />
</div>
`;

exports[`<Pager /> rendering should render last page correctly 1`] = `
<div
  className="list-pager"
  data-testid="overviewPagerComponent"
>
  <div
    className="pager"
  >
    <a
      className="pager_nav vorige"
      onClick={[Function]}
      role="presentation"
    >
      vorige
    </a>
    <a
      className="pager_step pagina"
      key="1"
      onClick={[Function]}
      role="presentation"
    >
      1
    </a>
    <a
      className="pager_step pagina"
      key="2"
      onClick={[Function]}
      role="presentation"
    >
      2
    </a>
    <a
      className="pager_step pagina"
      key="3"
      onClick={[Function]}
      role="presentation"
    >
      3
    </a>
    <span
      className="pager_step puntjes"
      key="4"
      role="presentation"
    >
      <strong>
        ...
      </strong>
    </span>
    <a
      className="pager_step pagina"
      key="22"
      onClick={[Function]}
      role="presentation"
    >
      22
    </a>
    <a
      className="pager_step pagina"
      key="23"
      onClick={[Function]}
      role="presentation"
    >
      23
    </a>
    <span
      className="pager_step huidige"
      key="24"
      role="presentation"
    >
      <strong>
        24
      </strong>
    </span>
  </div>
</div>
`;

exports[`<Pager /> rendering should render page 8 correctly 1`] = `
<div
  className="list-pager"
  data-testid="overviewPagerComponent"
>
  <div
    className="pager"
  >
    <a
      className="pager_nav vorige"
      onClick={[Function]}
      role="presentation"
    >
      vorige
    </a>
    <a
      className="pager_step pagina"
      key="1"
      onClick={[Function]}
      role="presentation"
    >
      1
    </a>
    <a
      className="pager_step pagina"
      key="2"
      onClick={[Function]}
      role="presentation"
    >
      2
    </a>
    <a
      className="pager_step pagina"
      key="3"
      onClick={[Function]}
      role="presentation"
    >
      3
    </a>
    <span
      className="pager_step puntjes"
      key="4"
      role="presentation"
    >
      <strong>
        ...
      </strong>
    </span>
    <a
      className="pager_step pagina"
      key="6"
      onClick={[Function]}
      role="presentation"
    >
      6
    </a>
    <a
      className="pager_step pagina"
      key="7"
      onClick={[Function]}
      role="presentation"
    >
      7
    </a>
    <span
      className="pager_step huidige"
      key="8"
      role="presentation"
    >
      <strong>
        8
      </strong>
    </span>
    <a
      className="pager_step pagina"
      key="9"
      onClick={[Function]}
      role="presentation"
    >
      9
    </a>
    <a
      className="pager_step pagina"
      key="10"
      onClick={[Function]}
      role="presentation"
    >
      10
    </a>
    <span
      className="pager_step puntjes"
      key="11"
      role="presentation"
    >
      <strong>
        ...
      </strong>
    </span>
    <a
      className="pager_step pagina"
      key="22"
      onClick={[Function]}
      role="presentation"
    >
      22
    </a>
    <a
      className="pager_step pagina"
      key="23"
      onClick={[Function]}
      role="presentation"
    >
      23
    </a>
    <a
      className="pager_step pagina"
      key="24"
      onClick={[Function]}
      role="presentation"
    >
      24
    </a>
    <a
      className="pager_nav volgende"
      onClick={[Function]}
      role="presentation"
    >
      volgende
    </a>
  </div>
</div>
`;
